--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require":{
 		"php": ">=5.3",
-		"davewid/peyote": "0.3.*"
+		"davewid/peyote": "dev-master"
 	},
 	"autoload": {
 		"psr-0": { "Cactus": "classes/" }
