Removing the Peyote library (for now)...

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
 		}
 	],
 	"require":{
-		"php": ">=5.3",
-		"davewid/peyote": "dev-master"
+		"php": ">=5.3"
 	},
 	"autoload": {
 		"psr-0": { "Cactus": "classes/" }
