Rewrote Peyote over the weekend, so I'm putting it back in.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		}
 	],
 	"require":{
-		"php": ">=5.3"
+		"php": ">=5.3",
+		"davewid/peyote": "0.5.*"
 	},
 	"autoload": {
 		"psr-0": { "Cactus": "classes/" }
